issue: use react16 version

--- a/package.json
+++ b/package.json
@@ -33,19 +33,19 @@
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-spread": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.1.2",
     "babel-register": "^6.0.0",
-    "copy-webpack-plugin": "^4.3.1",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "codeclimate-test-reporter": "^0.3.1",
     "connect-history-api-fallback": "^1.1.0",
+    "copy-webpack-plugin": "^4.3.1",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
     "eventsource-polyfill": "^0.9.6",
@@ -64,6 +64,8 @@
     "node-sass": "^3.13.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^4.0.2",
     "semver": "^5.3.0",
@@ -86,8 +88,6 @@
     "classnames": "^2.2.5",
     "noop": "github:afeiship/noop",
     "object-assign": "^4.1.1",
-    "prop-types": "^15.5.10",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "prop-types": "^15.5.10"
   }
 }
