--- a/package.json
+++ b/package.json
@@ -1,93 +1,82 @@
 {
-  "name": "react-ant-editable-tag-group",
-  "version": "0.1.0",
+  "name": "@feizheng/react-ant-editable-tag-group",
+  "version": "1.0.0",
   "description": "Editable tag group for ant.",
-  "author": "afeiship <1290657123@qq.com>",
-  "keywords": [
-    "components",
-    "react-ant-editable-tag-group",
-    "ui",
-    "theme"
-  ],
-  "private": false,
+  "main": "dist/index.js",
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --env.type=dev",
+    "build": "cross-env NODE_ENV=production webpack -p --env.type=build",
+    "release": "cross-env NODE_ENV=production webpack -p --env.type=release",
+    "predocs": "node build/markdown.js",
+    "docs": "cross-env NODE_ENV=production webpack -p --env.type=docs",
+    "pages": "./bin/docs.rb",
+    "start": "node build/server.js",
+    "test": "jest"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/afeiship/react-ant-editable-tag-group.git"
   },
+  "keywords": [
+    "react",
+    "component"
+  ],
+  "author": "afei",
   "license": "MIT",
+  "browserslist": {
+    "production": [
+      "last 2 version",
+      "Explorer >= 10",
+      "Android >= 4"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "bugs": {
     "url": "https://github.com/afeiship/react-ant-editable-tag-group/issues"
   },
-  "homepage": "https://github.com/afeiship/react-ant-editable-tag-group",
-  "scripts": {
-    "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "docs": "node build/auto-readme.js"
-  },
-  "main": "./dist/react-ant-editable-tag-group.js",
+  "homepage": "https://github.com/afeiship/react-ant-editable-tag-group#readme",
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "autoprefixer-loader": "^3.2.0",
-    "babel": "^6.5.2",
-    "babel-core": "^6.0.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-spread": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.1.2",
-    "babel-register": "^6.0.0",
-    "chai": "^3.5.0",
-    "chalk": "^1.1.3",
-    "codeclimate-test-reporter": "^0.3.1",
-    "connect-history-api-fallback": "^1.1.0",
-    "copy-webpack-plugin": "^4.3.1",
-    "cross-spawn": "^4.0.2",
-    "css-loader": "^0.25.0",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "file-regexp": "github:afeiship/file-regexp",
-    "function-bind": "^1.0.2",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.8.1",
-    "http-proxy-middleware": "^0.17.2",
-    "inject-loader": "^2.0.1",
-    "isparta-loader": "^2.0.0",
-    "json-loader": "^0.5.4",
-    "lolex": "^1.4.0",
-    "node-sass": "^3.13.0",
-    "opn": "^4.0.2",
-    "ora": "^0.3.0",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "sass-loader": "^4.0.2",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.4",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1"
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.4.0",
+    "@feizheng/next-replace-in-file": "^1.0.0",
+    "@feizheng/rake-git": "^1.2.0",
+    "@feizheng/react-markdown-props": "^1.1.0",
+    "antd": "^3.26.11",
+    "babel-loader": "^8.0.5",
+    "cross-env": "^5.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "express": "^4.16.4",
+    "indent-string": "^4.0.0",
+    "jest": "^24.5.0",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.16.4",
+    "react-testing-library": "^6.0.2",
+    "string-replace-webpack-plugin": "^0.1.3",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+  "peerDependencies": {
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5"
   },
   "dependencies": {
-    "antd": "^3.4.0",
-    "classnames": "^2.2.5",
-    "noop": "github:afeiship/noop",
-    "object-assign": "^4.1.1",
-    "prop-types": "^15.5.10"
+    "@feizheng/noop": "^1.0.0",
+    "@feizheng/webpack-lib-kits": "^1.1.9",
+    "classnames": "^2.2.6",
+    "prop-types": "^15.7.2"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
